--- a/html/blog.html
+++ b/html/blog.html
@@ -55,7 +55,7 @@
         <section class="sectionUno">
             <h2 class="text-center">Informacion</h2>
             <!-- Carousel de boostrap -->
-            <div id="carouselExampleCaptions" class="carousel slide w-50 mx-auto" data-bs-ride="carousel">
+            <div id="carouselExampleCaptions" class="carousel slide mx-auto ancho" data-bs-ride="carousel">
                 <div class="carousel-indicators">
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                   <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -99,7 +99,7 @@
         </section>
     </main>
     <footer>
-        <p>Created By <span><a href="https://www.instagram.com/nahuel.giannantonio/">Nahuel Giannantonio</a></span> | 2021 All rights reserved.</p>
+        <p>Created By <span><a href="https://www.linkedin.com/in/nahuel-giannantonio/">Nahuel Giannantonio</a></span> | 2021 All rights reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
 </body>
