--- a/html/proyectos.html
+++ b/html/proyectos.html
@@ -114,7 +114,7 @@
         </section>
     </main>
     <footer>
-        <p>Created By <span><a href="https://www.instagram.com/nahuel.giannantonio/">Nahuel Giannantonio</a></span> | 2021 All rights reserved.</p>
+        <p>Created By <span><a href="https://www.linkedin.com/in/nahuel-giannantonio/">Nahuel Giannantonio</a></span> | 2021 All rights reserved.</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-kQtW33rZJAHjgefvhyyzcGF3C5TFyBQBA13V1RKPf4uH+bwyzQxZ6CmMZHmNBEfJ" crossorigin="anonymous"></script>
 </body>
