--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                         <a href="html/formulario.html"><button type="button" class="btn btn-primary">Contactame</button></a>
                     </div>
                     <div class="col-lg-12 mt-5">
-                        <p class="mb-0">Desarrollador web con amplia experiencia, siempre he sido un apasionado de la informática desde muy joven. He estado trabajando con tecnologías de desarrollo para trabajos personales, siempre manteniendo al día mis conocimientos con respecto a los cambios que se producen día a día</p> 
+                        <p class="mb-0">Desarrollador web con amplia experiencia, siempre he sido un apasionado de la informática desde muy joven. He estado trabajando con tecnologías de desarrollo para trabajos personales, siempre manteniendo al día mis conocimientos con respecto a los cambios que se producen en la actualidad</p> 
                         <p>Me considero una persona responsable, autodidacta, versátil y con facilidad para trabajar en equipo.</p>
                     </div>
                 </div>
